<resources>
    <string name="app_name">Techumen</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_online">Online</string>
    <string name="title_offline">Offline</string>
    <string name="title_About">Events</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
