<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/title_home"
        android:icon="@mipmap/ic_home_white_24dp"
        android:id="@+id/navigation_home"
        app:showAsAction="always"
        android:visible="true"
        />
    <item android:title="@string/title_offline"
        android:icon="@mipmap/ic_view_list_white_24dp"
        android:id="@+id/navigation_offline"
        app:showAsAction="always"
        android:visible="true"
        />
    <item android:title="@string/title_add"
        android:icon="@mipmap/ic_add_white_24dp"
        android:id="@+id/navigation_add"
        app:showAsAction="always"
        android:visible="true"
        />
    <item android:title="@string/title_About"
        android:icon="@mipmap/ic_info_outline_white_24dp"
        android:id="@+id/navigation_About"
        app:showAsAction="always"
        android:visible="true"
        />
    <item android:title="@string/title_help"
        android:icon="@mipmap/ic_help_outline_white_24dp"
        android:id="@+id/navigation_help"
        app:showAsAction="always"
        android:visible="true"
        />
</menu>